IJI-3421 build scripts: add -XX:+EnableDynamicAgentLoading to testing JVM arguments to remove warnings
ref IJI-3421 AI-friendly output for tests.cmd

GitOrigin-RevId: 89226910b76a5fccf83a4dead96844a2abc96f65